Fix portfolio grid issue for pages with uneven number of pieces.

--- a/style/style.css
+++ b/style/style.css
@@ -161,6 +161,8 @@ hr.dotted-line {
 .invisible {
   visibility: hidden;
   cursor: inherit;
+  width: 202px;
+  height: 230px;
 }
 .container {
   width: 100%;
